     [build-system]
     build-backend = "setuptools.build_meta"
     requires = ["setuptools>=61.0.0", "wheel"]
     
     [project]
name = "python-nmap"
version = "2025.05.26"
dependencies = [
  "python-nmap>0.7.1",
]
requires-python = ">=3.6"

description = "A port scanning tool for educational purposes."
readme = "README.md"
license = "NONE"
keywords = ["nmap", "python-nmap"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/prepay7776/python-nmap"
